Fix social media icons in dark mode & upgrade ruby including dependencies.

--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -50,6 +50,7 @@ body
   --log-color: #808080
   --target-color: #dddddd
   --meeting-index-color: #606060
+  --icon-color: black
 
 // Dark
 #color-mode:checked ~ .site-container
@@ -62,6 +63,7 @@ body
   --log-color: #080808
   --target-color: #3a3939
   --meeting-index-color: #8c5e5e
+  --icon-color: white
 
 a
   color: var(--link-color)
@@ -167,3 +169,6 @@ a
   font-size: 50%
   display: flex
   align-items: flex-end
+
+.fa, .fas, .far, .fal, .fab
+  color: var(--icon-color)
